--- a/src/gui/TestGUI.fxml
+++ b/src/gui/TestGUI.fxml
@@ -30,23 +30,11 @@
             <RowConstraints maxHeight="231.0" minHeight="10.0" prefHeight="87.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Slider fx:id="sliderHoyde" max="200.0" onDragDetected="#handleSliderChange" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Slider fx:id="sliderVekt" max="120.0" onDragDetected="#handleSliderChange" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Slider fx:id="sliderAlder" onDragDetected="#handleSliderChange" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Slider fx:id="sliderIq" max="200.0" onDragDetected="#handleSliderChange" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Slider fx:id="sliderNumCases" majorTickUnit="1.0" max="5.0" onDragDetected="#handleSliderChange" showTickLabels="true" showTickMarks="true" snapToTicks="true" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Label text="Høyde" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
-            <Label text="Vekt" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
-            <Label text="Alder" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
-            <Label text="IQ" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
-            <Label text="Number of cases" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
-            <Label fx:id="hoydeNum" text="0" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
-            <Label fx:id="vektNum" text="0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
-            <Label fx:id="alderNum" text="0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
-            <Label fx:id="iqNum" text="0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
-            <Label fx:id="numCasesNum" text="0" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
+            <Slider fx:id="sliderNumCases" majorTickUnit="1.0" max="5.0" onDragDetected="#handleSliderChange" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="3.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+            <Label text="Number of cases" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="BOTTOM" />
+            <Label fx:id="numCasesNum" text="3" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="BOTTOM" />
             <ListView fx:id="caseList" editable="true" onEditStart="#handleButtonAction" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="3" GridPane.rowSpan="2" />
-            <Button fx:id="btn" mnemonicParsing="false" onAction="#handleButtonAction" text="Retrieve" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+            <Button fx:id="btn" mnemonicParsing="false" onAction="#handleButtonAction" text="Retrieve next" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
             <GridPane onDragDetected="#handleButtonAction" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="6" GridPane.rowSpan="3">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -76,6 +64,7 @@
                   <TextField fx:id="diagnosisText" onAction="#handleButtonAction" prefHeight="25.0" prefWidth="341.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
                </children>
             </GridPane>
+            <Button fx:id="startRet" mnemonicParsing="false" onAction="#startLineReader" text="Start thread" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
